KKD-462 - Fix content shift, lazy loading and lightbox trigger

--- a/public/css/src/components/embed.less
+++ b/public/css/src/components/embed.less
@@ -16,7 +16,7 @@
     }
 }
 
-.embed, .lazy {
+.embed, .lazy:not(video):not(img) {
     margin: 0 0 1em;
     position: relative;
     padding-bottom: 56.25%;
